refactor(rest): Port SearchUtils from Groovy to Java